# swauth

./: .gitignore  .gitreview  .mailmap  .unittests  AUTHORS  CHANGELOG  CONTRIBUTING.rst  MANIFEST.in  README.md  bindep.txt  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  gbp.conf  python-swauth.docs  rules  swauth-doc.docs  swauth-doc.links
doc/source/: api.rst  conf.py  index.rst
etc/: proxy-server.conf-sample
releasenotes/source/: conf.py  index.rst
swauth/: __init__.py  authtypes.py  middleware.py  swift_version.py
test/: __init__.py
test/unit/: test_authtypes.py  test_middleware.py  test_swift_version.py
test_swauth/unit/: test_authtypes.py  test_middleware.py
