[metadata]
name = swauth
summary = An alternative authentication system for Swift
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://github.com/openstack/swauth
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    swauth
scripts =
    bin/swauth-add-account
    bin/swauth-add-user
    bin/swauth-cleanup-tokens
    bin/swauth-delete-account
    bin/swauth-delete-user
    bin/swauth-list
    bin/swauth-prep
    bin/swauth-set-account-service

[entry_points]
paste.filter_factory =
    swauth = swauth.middleware:filter_factory

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = swauth/locale
domain = swauth

[update_catalog]
domain = swauth
output_dir = swauth/locale
input_file = swauth/locale/swauth.pot

[extract_messages]
keywords = _ l_ lazy_gettext
mapping_file = babel.cfg
output_file = swauth/locale/swauth.pot
